# NixieTextFX

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
src/: LocalClock.cpp  LocalClock.hpp  NixieDisplay.cpp  NixieDisplay.hpp  NixieInit.cpp  NixieInit.hpp  NixieInitGlobals.hpp  NixieOne_Mono_ttf.h  globals.h  init.cpp  localTime.cpp  main.cpp
